fast login support

--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,2 +1,3 @@
 eclipse.preferences.version=1
+encoding//src/com/aspire/g3wlan/client/AuthPortalCMCC.java=UTF-8
 encoding//src/engine/AuthPortalCMCC.java=UTF-8
