--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -8,10 +8,10 @@
         android:targetSdkVersion="15" />
 
     <application
+        android:name="ui.MyApplication"
         android:icon="@drawable/launcher"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme" 
-        android:name="ui.MyApplication">
+        android:theme="@style/AppTheme" >
         <activity
             android:name="ui.MainActivity"
             android:label="@string/title_activity_main" >
@@ -21,35 +21,41 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name="ui.Login"
-            android:theme="@android:style/Theme.NoTitleBar"/>
-        <activity android:name="ui.LoginProcess"
-            android:theme="@android:style/Theme.NoTitleBar"/>
-        <activity android:name="ui.Browser"
-            android:theme="@android:style/Theme.NoTitleBar"/>
-        <activity android:name="ui.Report"
-            android:theme="@android:style/Theme.NoTitleBar"/>
+        <activity
+            android:name="ui.Login"
+            android:theme="@android:style/Theme.NoTitleBar" />
+        <activity
+            android:name="ui.LoginProcess"
+            android:theme="@android:style/Theme.NoTitleBar" />
+        <activity
+            android:name="ui.Browser"
+            android:theme="@android:style/Theme.NoTitleBar" />
+        <activity
+            android:name="ui.Report"
+            android:theme="@android:style/Theme.NoTitleBar" />
     </application>
-    <uses-permission
-        android:name="android.permission.ACCESS_WIFI_STATE"></uses-permission>
-    <uses-permission
-        android:name="android.permission.ACCESS_CHECKIN_PROPERTIES"></uses-permission>
-    <uses-permission
-        android:name="android.permission.WAKE_LOCK"></uses-permission>
-    <uses-permission
-        android:name="android.permission.INTERNET"></uses-permission>
-    <uses-permission
-        android:name="android.permission.CHANGE_WIFI_STATE"></uses-permission>
-    <uses-permission
-        android:name="android.permission.MODIFY_PHONE_STATE"></uses-permission>
-    <uses-permission android:name="android.permission.CHANGE_NETWORK_STATE"></uses-permission>
-    <uses-permission android:name="android.permission.READ_PHONE_STATE"/>
-    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
+
+    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" >
+    </uses-permission>
+    <uses-permission android:name="android.permission.ACCESS_CHECKIN_PROPERTIES" >
+    </uses-permission>
+    <uses-permission android:name="android.permission.WAKE_LOCK" >
+    </uses-permission>
+    <uses-permission android:name="android.permission.INTERNET" >
+    </uses-permission>
+    <uses-permission android:name="android.permission.CHANGE_WIFI_STATE" >
+    </uses-permission>
+    <uses-permission android:name="android.permission.MODIFY_PHONE_STATE" >
+    </uses-permission>
+    <uses-permission android:name="android.permission.CHANGE_NETWORK_STATE" >
+    </uses-permission>
+    <uses-permission android:name="android.permission.READ_PHONE_STATE" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
-	<uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
-	<uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
-	<uses-permission android:name="android.permission.ACCESS_COARSE_UPDATES"/>
-    <uses-permission android:name="android.permission.MOUNT_UNMOUNT_FILESYSTEMS"/>
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.ACCESS_COARSE_UPDATES" />
+    <uses-permission android:name="android.permission.MOUNT_UNMOUNT_FILESYSTEMS" />
 
 </manifest>
